# Visteon-work

./: Bengali New Year Budget 2026.xlsx  C Hackthon Results_consolidated.xlsx  C++ KT (1).pptx  C++ KT.pptx  C11_Design_Document.docx  HVAC_Automation_Project.pptx  Purulia Trip Expenditure.xlsx  README.md  SmartVehicle_ECU_Hackathon_Report_C14 (1).docx  Sneha-Lahiri_Resume.docx  VHAL - Internship Report_kk 1.pptx  design_doc.md  overall_test_case_summary.csv  performance_metrics.csv  performance_metrics_new.xlsx  tshirt_list(T-Shirt List).csv  tshirt_list_updated.csv  uniqlog.txt  vehicle_climate_service_android_properties 1.json
AI_Automation/: README.md  download_model.py  extract_non_target.py  extract_rx.py  extract_tx.py  generate_training_data.py  inference.py  latest_test_model.py  latest_testing.txt  llm_fine_tuning_dataset.json  llm_fine_tuning_dataset_old.json  (+9 more)
HACKCPP/: CMakeLists.txt  README.md  code_size_metrics.txt
HACKCPP/data/: config.txt  driver_profiles.json  test_cases.json
HACKCPP/include/: Alert.hpp  CanBus.hpp  Dashboard.hpp  DriverProfile.hpp  DtcManager.hpp  EcuMonitor.hpp  EdrRecorder.hpp  JsonParser.hpp  Logger.hpp  OtaSimulator.hpp  Sensor.hpp  ServiceBus.hpp  ThreadManager.hpp
HACKCPP/logs/: edr_log.txt  performance_metrics.csv  performance_metrics_new.csv  test_report.csv  test_suite_log.txt  user_defined_test_log.txt  vehicle_log.txt
HACKCPP/src/: Alert.cpp  CanBus.cpp  Dashboard.cpp  DtcManager.cpp  EcuMonitor.cpp  EdrRecorder.cpp  Logger.cpp  OtaSimulator.cpp  Sensor.cpp  ServiceBus.cpp  ThreadManager.cpp  main.cpp  tests.cpp
(+299 files in other folders)
